--- a/COMP-4549-Assignment3/COMP-4549-Assignment3.csproj
+++ b/COMP-4549-Assignment3/COMP-4549-Assignment3.csproj
@@ -134,6 +134,10 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Client.cs" />
+    <Compile Include="Models\Employee.cs" />
+    <Compile Include="Models\Jobs.cs" />
+    <Compile Include="Models\Person.cs" />
+    <Compile Include="Models\Services.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
