--- a/COMP-4549-Assignment3/COMP-4549-Assignment3.csproj
+++ b/COMP-4549-Assignment3/COMP-4549-Assignment3.csproj
@@ -134,6 +134,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202301300238347_InitialCreate.cs" />
+    <Compile Include="Migrations\202301300238347_InitialCreate.designer.cs">
+      <DependentUpon>202301300238347_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202301300327168_AddJobCollectionClient.cs" />
+    <Compile Include="Migrations\202301300327168_AddJobCollectionClient.designer.cs">
+      <DependentUpon>202301300327168_AddJobCollectionClient.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Client.cs" />
     <Compile Include="Models\Employee.cs" />
     <Compile Include="Models\Jobs.cs" />
@@ -203,6 +212,14 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202301300238347_InitialCreate.resx">
+      <DependentUpon>202301300238347_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202301300327168_AddJobCollectionClient.resx">
+      <DependentUpon>202301300327168_AddJobCollectionClient.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
