--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,8 +12,9 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
-
+    runs-on: windows-latest
+    env:
+      SOLUTIONPATH: ./COMP-4549-Assignment3.sln
     steps:
     - uses: actions/checkout@v3
     - name: Setup MSBuild
@@ -24,6 +25,4 @@ jobs:
       run: |
               chmod +x ./scripts/INstallChrome.sh
                             ./scripts/InstallChrome.sh
-    - name: Unit test
-      run: dotnet test
       
