--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,7 +27,7 @@ jobs:
       uses: darenm/Setup-VSTest@v1
       
     - name: Restore Packages
-      run: nuget restore Sandbox.sln
+      run: nuget restore SOLUTIONPATH
       
     - name: Build Solution
       run: msbuild.exe SOLUTIONPATH /p:platform="Any CPU" /p:configuration="Release"
