--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,17 +27,19 @@ jobs:
       uses: darenm/Setup-VSTest@v1
       
     - name: Restore Packages
-      run: nuget restore ./COMP-4549-Assignment3.sln
+      run: nuget restore COMP-4549-Assignment3.sln
       
     - name: Build Solution
-      run: msbuild.exe ./COMP-4549-Assignment3.sln /p:platform="Any CPU" /p:configuration="Release"
+      run: msbuild.exe COMP-4549-Assignment3.sln /p:platform="Any CPU" /p:configuration="Release"
+    - name: Run Solution
+      run: vstest.console.exe COMP-4549-Assignment3\bin\Debug\SeleniumTest.Tests.dll
     
-    - name: Install Google Chrome
-      uses: nanasess/setup-chromedriver@v1
-    - run: chromedriver --url-base=/wd/hub &
+#     - name: Install Google Chrome
+#       uses: nanasess/setup-chromedriver@v1
+#     - run: chromedriver --url-base=/wd/hub &
     
-    - name: Build Test
-      run: msbuild SeleniumTest.Tests\SeleniumTest.Tests.csproj
+#     - name: Build Test
+#       run: msbuild SeleniumTest.Tests\SeleniumTest.Tests.csproj
     - name: Run Test
       run: vstest.console.exe SeleniumTest.Tests\bin\Debug\SeleniumTest.Tests.dll
       
