--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -40,6 +40,12 @@ jobs:
     
 #     - name: Build Test
 #       run: msbuild SeleniumTest.Tests\SeleniumTest.Tests.csproj
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v1.0.0
+      with:
+        name: published_webapp
+        path: bin\Release\Publish
+        
     - name: Run Test
       run: vstest.console.exe SeleniumTest.Tests\bin\Release\SeleniumTest.Tests.dll
       
