--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,21 +31,19 @@ jobs:
       
     - name: Build Solution
       run: msbuild.exe COMP-4549-Assignment3.sln /p:platform="Any CPU" /p:configuration="Release"
-#     - name: Run Solution
-#       run: vstest.console.exe COMP-4549-Assignment3\bin\COMP-4549-Assignment3.dll
-    
-#     - name: Install Google Chrome
-#       uses: nanasess/setup-chromedriver@v1
-#     - run: chromedriver --url-base=/wd/hub &
-    
-#     - name: Build Test
-#       run: msbuild SeleniumTest.Tests\SeleniumTest.Tests.csproj
+    - name: Run Solution
+      run: vstest.console.exe COMP-4549-Assignment3\bin\COMP-4549-Assignment3.dll
+
     - name: Upload Artifact
       uses: actions/upload-artifact@v1.0.0
       with:
         name: published_webapp
         path: COMP-4549-Assignment3\obj\Release
         
+    - name: Install Google Chrome
+      uses: nanasess/setup-chromedriver@v1
+    - run: chromedriver --url-base=/wd/hub &
+    
     - name: Run Test
-      run: vstest.console.exe SeleniumTest.Tests\bin\Release\SeleniumTest.Tests.dll
+      run: msbuild SeleniumTest.Tests\SeleniumTest.Tests.csproj
       
